---
source: compiler-core/src_refactored/__core/type_/tests/externals.rs
assertion_line: 15
expression: "@external(javascript, \"one\", \"two\")\nfn js_only() -> Int\n\npub fn main() {\n  js_only()\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
@external(javascript, "one", "two")
fn js_only() -> Int

pub fn main() {
  js_only()
}


----- ERROR
error: Unsupported target
  ┌─ /src/one/two.gleam:5:3
  │
5 │   js_only()
  │   ^^^^^^^

This value is not available as it is defined using externals, and there is
no implementation for the Erlang target.

Hint: Did you mean to build for a different target?
